--- a/deployment/sandbox-v2/helm/charts/ingress-nginx/templates/dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/ingress-nginx/templates/dep.yaml
@@ -30,6 +30,8 @@ spec:
       containers:
         - name: nginx-ingress-controller
           image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.30.0
+          {{ $resources := .Values.podconfig.resources }}
+          {{- include "resourcesDefinition" (dict "res" $resources) | indent 10 }}
           args:
             - /nginx-ingress-controller
             - --configmap=$(POD_NAMESPACE)/nginx-configuration
