--- a/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
@@ -30,6 +30,8 @@ spec:
       - name: {{ .Values.services.partner.serviceName }} 
         image: {{ .Values.services.partner.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
+        {{ $resources := .Values.services.partner.podconfig.resources }}
+        {{- include "resourcesDefinition" (dict "res" $resources) | indent 8 }}
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
