--- a/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/templates/config-dep.yaml
@@ -25,6 +25,8 @@ spec:
       - name: {{ .Values.name }}
         image: {{ .Values.docker.image }}
         imagePullPolicy: Always
+        {{ $resources := .Values.services.config_server.podconfig.resources }}
+        {{- include "resourcesDefinition" (dict "res" $resources) | indent 8 }}
         env:
         - name: SPRING_CLOUD_CONFIG_SERVER_GIT_SEARCHPATHS 
           value: {{ .Values.gitRepo.searchFolders }}
