--- a/deployment/sandbox-v2/helm/charts/websub/templates/websub-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/websub-dep.yaml
@@ -25,6 +25,8 @@ spec:
       - name: {{ .Values.services.serviceName }}
         image: {{ .Values.services.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
+        {{ $resources := .Values.services.podconfig.resources }}
+        {{- include "resourcesDefinition" (dict "res" $resources) | indent 8 }}
         env:
         - name: hub_datasource_url_env
           value: {{ .Values.hub.datasource_url }}
