[MOSIP-10589] updated the mock abis image

--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -159,7 +159,7 @@ versions:
 
     mock:
       abis:
-        'mock-abis': 'mosipid/mock-abis:master'
+        'mock-abis': 'mosipdev/mock-abis:master'
 #      biosdk: 
 #        'mock-biosdk-service': 'ankitvaishnav/sdk-services:latest'
 
