[MOSIP-11744] Packetmanager changes.

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -139,7 +139,7 @@ postgres:
   port: 30090 # hardcoded node port for postgres  
   user: postgres 
   password: '{{secrets.postgres.su}}'
-  init: true  # Initialize db. Set it to false in production after initializing once.
+  init: false  # Initialize db. Set it to false in production after initializing once.
 
   # All below configs applicable only when external: false 
   internal_host: postgres # Service name of postgres k8s service. Not applicable if external=true
@@ -387,3 +387,5 @@ iam_adapter_url: http://artifactory-service/artifactory/libs-release-local/io/mo
 iam_adapter_ext_url: '{{clusters.mz.ingress.base_url}}/artifactory/libs-release-local/io/mosip/kernel/kernel-auth-adapter.jar'
 runtimeDepUrlpath: http://artifactory-service/artifactory/libs-release-local/io/mosip/kernel/
 biosdk_service_url: http://13.233.66.241/biosdk-service
+cache_provider_url: http://artifactory-service/artifactory/libs-release-local/cache/cache-provider.jar
+
