--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -43,7 +43,7 @@ versions:
     registration_client:
       downloader:
         'reg-client-downloader': 'mosipdev/registration-client:1.1.4'
-      version: 1.1.4-rc1
+      version: 1.1.4
     regproc:
       camel:
         'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.4'
@@ -161,7 +161,7 @@ versions:
       abis:
         'mock-abis': 'mosipdev/mock-abis:master'
 #      biosdk: 
-#        'mock-biosdk-service': 'ankitvaishnav/sdk-services:latest'
+#        'mock-biosdk-service': 'mosipdev/sdk-services:latest'
 
     artifactory:
       service:
