--- a/deployment/sandbox-v2/versions.yml
+++ b/deployment/sandbox-v2/versions.yml
@@ -4,27 +4,27 @@ versions:
 
     kernel:
       auth:
-        'kernel-auth-service':  'mosipdev/kernel-auth-service:1.1.4'
+        'kernel-auth-service':  'mosipid/kernel-auth-service:1.1.4'
       masterdata:
-        'kernel-masterdata-service': 'mosipdev/kernel-masterdata-service:1.1.4'
+        'kernel-masterdata-service': 'mosipid/kernel-masterdata-service:1.1.4'
       idgen:
-        'kernel-idgenerator-service': 'mosipdev/kernel-idgenerator-service:1.1.4'
+        'kernel-idgenerator-service': 'mosipid/kernel-idgenerator-service:1.1.4'
       prid:
-        'kernel-pridgenerator-service': 'mosipdev/kernel-pridgenerator-service:1.1.4'
+        'kernel-pridgenerator-service': 'mosipid/kernel-pridgenerator-service:1.1.4'
       sync:
-        'kernel-syncdata-service': 'mosipdev/kernel-syncdata-service:1.1.4'
+        'kernel-syncdata-service': 'mosipid/kernel-syncdata-service:1.1.4'
       audit :
-        'kernel-auditmanager-service': 'mosipdev/kernel-auditmanager-service:1.1.4'
+        'kernel-auditmanager-service': 'mosipid/kernel-auditmanager-service:1.1.4'
       key:
-        'kernel-keymanager-service': 'mosipdev/kernel-keymanager-service:1.1.4'
+        'kernel-keymanager-service': 'mosipid/kernel-keymanager-service:1.1.4'
       notifier:
-        'kernel-notification-service': 'mosipdev/kernel-notification-service:1.1.4'
+        'kernel-notification-service': 'mosipid/kernel-notification-service:1.1.4'
       otp:
-        'kernel-otpmanager-service': 'mosipdev/kernel-otpmanager-service:1.1.4'
+        'kernel-otpmanager-service': 'mosipid/kernel-otpmanager-service:1.1.4'
       rid:
-        'kernel-ridgenerator-service': 'mosipdev/kernel-ridgenerator-service:1.1.4'
+        'kernel-ridgenerator-service': 'mosipid/kernel-ridgenerator-service:1.1.4'
       keygen:
-        'kernel-keys-generator': 'mosipdev/keys-generator:1.1.4'
+        'kernel-keys-generator': 'mosipid/keys-generator:1.1.4'
 
     prereg:
       application:
@@ -42,127 +42,127 @@ versions:
       
     registration_client:
       downloader:
-        'reg-client-downloader': 'mosipdev/registration-client:1.1.4'
+        'reg-client-downloader': 'mosipid/registration-client:1.1.4'
       version: 1.1.4
     regproc:
       camel:
-        'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.4'
+        'regproc-camel-stage': 'mosipid/registration-processor-common-camel-bridge:1.1.4'
       notification: 
-        'regproc-securezone-notification-stage': 'mosipdev/registration-processor-securezone-notification-stage:1.1.4'
+        'regproc-securezone-notification-stage': 'mosipid/registration-processor-securezone-notification-stage:1.1.4'
       uploader:
-        'regproc-packet-uploader-stage': 'mosipdev/registration-processor-packet-uploader-stage:1.1.4'
+        'regproc-packet-uploader-stage': 'mosipid/registration-processor-packet-uploader-stage:1.1.4'
       quality:
-        'regproc-quality-checker-stage': 'mosipdev/registration-processor-quality-checker-stage:1.1.4'
+        'regproc-quality-checker-stage': 'mosipid/registration-processor-quality-checker-stage:1.1.4'
       validator:
-        'regproc-packet-validator-stage': 'mosipdev/registration-processor-packet-validator-stage:1.1.4'
+        'regproc-packet-validator-stage': 'mosipid/registration-processor-packet-validator-stage:1.1.4'
       osi:
-        'regproc-osi-validator-stage': 'mosipdev/registration-processor-osi-validator-stage:1.1.4'
+        'regproc-osi-validator-stage': 'mosipid/registration-processor-osi-validator-stage:1.1.4'
       demo:
-        'regproc-demo-dedupe-stage': 'mosipdev/registration-processor-demo-dedupe-stage:1.1.4'
+        'regproc-demo-dedupe-stage': 'mosipid/registration-processor-demo-dedupe-stage:1.1.4'
       bio:
-        'regproc-bio-dedupe-stage': 'mosipdev/registration-processor-bio-dedupe-stage:1.1.4'
+        'regproc-bio-dedupe-stage': 'mosipid/registration-processor-bio-dedupe-stage:1.1.4'
       bioauth:
-        'regproc-biometric-authentication-stage': 'mosipdev/registration-processor-biometric-authentication-stage:1.1.4'
+        'regproc-biometric-authentication-stage': 'mosipid/registration-processor-biometric-authentication-stage:1.1.4'
       abishandler:
-        'regproc-abis-handler-stage': 'mosipdev/registration-processor-abis-handler-stage:1.1.4'
+        'regproc-abis-handler-stage': 'mosipid/registration-processor-abis-handler-stage:1.1.4'
       abismid:
-        'regproc-abis-middleware-stage': 'mosipdev/registration-processor-abis-middleware-stage:1.1.4'
+        'regproc-abis-middleware-stage': 'mosipid/registration-processor-abis-middleware-stage:1.1.4'
       manual:
-        'regproc-manual-verification-stage': 'mosipdev/registration-processor-manual-verification-stage:1.1.4'
+        'regproc-manual-verification-stage': 'mosipid/registration-processor-manual-verification-stage:1.1.4'
       external:
-        'regproc-external-stage': 'mosipdev/registration-processor-external-stage:1.1.4'
+        'regproc-external-stage': 'mosipid/registration-processor-external-stage:1.1.4'
       eis: 
-        'regproc-external-integration-service': 'mosipdev/registration-processor-external-integration-service:1.1.4'
+        'regproc-external-integration-service': 'mosipid/registration-processor-external-integration-service:1.1.4'
       uin:
-        'regproc-uin-generator-stage': 'mosipdev/registration-processor-uin-generator-stage:1.1.4'
+        'regproc-uin-generator-stage': 'mosipid/registration-processor-uin-generator-stage:1.1.4'
       msg:
-        'regproc-message-sender-stage': 'mosipdev/registration-processor-message-sender-stage:1.1.4'
+        'regproc-message-sender-stage': 'mosipid/registration-processor-message-sender-stage:1.1.4'
       print:
-        'regproc-printing-stage': 'mosipdev/registration-processor-printing-stage:1.1.4'
+        'regproc-printing-stage': 'mosipid/registration-processor-printing-stage:1.1.4'
       trans:
-        'regproc-registration-transaction-service': 'mosipdev/registration-processor-registration-transaction-service:1.1.4'
+        'regproc-registration-transaction-service': 'mosipid/registration-processor-registration-transaction-service:1.1.4'
       reprocess:
-        'regproc-reprocessor-stage': 'mosipdev/registration-processor-reprocessor-stage:1.1.4'
+        'regproc-reprocessor-stage': 'mosipid/registration-processor-reprocessor-stage:1.1.4'
 
     dmzregproc:  
       receiver:
-        'regproc-packet-receiver-stage': 'mosipdev/registration-processor-packet-receiver-stage:1.1.4'
+        'regproc-packet-receiver-stage': 'mosipid/registration-processor-packet-receiver-stage:1.1.4'
       camel:
-        'regproc-camel-stage': 'mosipdev/registration-processor-common-camel-bridge:1.1.4'
+        'regproc-camel-stage': 'mosipid/registration-processor-common-camel-bridge:1.1.4'
       status:
-        'regproc-registration-status-service': 'mosipdev/registration-processor-registration-status-service:1.1.4'
+        'regproc-registration-status-service': 'mosipid/registration-processor-registration-status-service:1.1.4'
       pktserver:
-        'regproc-dmz-packet-server': 'mosipdev/registration-processor-dmz-packet-server:1.0.9'
+        'regproc-dmz-packet-server': 'mosipid/registration-processor-dmz-packet-server:1.0.9'
         
     ida:
       auth:
-        'ida-auth-service': 'mosipdev/authentication-service:1.1.4'
+        'ida-auth-service': 'mosipid/authentication-service:1.1.4'
       internal: 
-         'ida-internal-service': 'mosipdev/authentication-internal-service:1.1.4'
+         'ida-internal-service': 'mosipid/authentication-internal-service:1.1.4'
       kyc: 
-         'ida-kyc-service': 'mosipdev/authentication-kyc-service:1.1.4'
+         'ida-kyc-service': 'mosipid/authentication-kyc-service:1.1.4'
       otp: 
-         'ida-otp-service': 'mosipdev/authentication-otp-service:1.1.4'
+         'ida-otp-service': 'mosipid/authentication-otp-service:1.1.4'
       keygen:  
-        'ida-key-generator': 'mosipdev/keys-generator:1.1.4'
+        'ida-key-generator': 'mosipid/keys-generator:1.1.4'
 
     idrepo:
       identity:
-        'idrepo-identity-service': 'mosipdev/id-repository-identity-service:1.1.4'
+        'idrepo-identity-service': 'mosipid/id-repository-identity-service:1.1.4'
       vid: 
-        'idrepo-vid-service': 'mosipdev/id-repository-vid-service:1.1.4'
+        'idrepo-vid-service': 'mosipid/id-repository-vid-service:1.1.4'
       bioextractor:
-        'idrepo-bioextractor-service': 'mosipdev/bioextractor-service:1.1.4'
+        'idrepo-bioextractor-service': 'mosipid/bioextractor-service:1.1.4'
       credentialreq:
-        'idrepo-credential-request-generator': 'mosipdev/credential-request-generator:1.1.4'
+        'idrepo-credential-request-generator': 'mosipid/credential-request-generator:1.1.4'
       credentialservice:
-        'idrepo-credential-service': 'mosipdev/credential-service:1.1.4'
+        'idrepo-credential-service': 'mosipid/credential-service:1.1.4'
       salt:  
-        'idrepo-salt-generator': 'mosipdev/id-repository-salt-generator:1.1.4'
+        'idrepo-salt-generator': 'mosipid/id-repository-salt-generator:1.1.4'
 
     pms:
       misp: 
-        'pms-misp-service': 'mosipdev/pmp-misp-service:1.1.4'
+        'pms-misp-service': 'mosipid/pmp-misp-service:1.1.4'
       pm:
-        'pms-partner-management-service': 'mosipdev/pmp-partner-management-service:1.1.4'
+        'pms-partner-management-service': 'mosipid/pmp-partner-management-service:1.1.4'
       partner:
-        'pms-partner-service': 'mosipdev/pmp-partner-service:1.1.4'
+        'pms-partner-service': 'mosipid/pmp-partner-service:1.1.4'
       policy:
-        'pms-policy-management-service': 'mosipdev/pmp-policy-management-service:1.1.4'
+        'pms-policy-management-service': 'mosipid/pmp-policy-management-service:1.1.4'
 
 
     resident: 
       resident:  
-        'resident-service': 'mosipdev/resident-service:1.1.4'
+        'resident-service': 'mosipid/resident-service:1.1.4'
     
     admin:
       service:
-        'admin-service': 'mosipdev/admin-service:1.1.4'
+        'admin-service': 'mosipid/admin-service:1.1.4'
       ui:
-        'admin-ui': 'mosipdev/admin-ui:1.1.4'
+        'admin-ui': 'mosipid/admin-ui:1.1.4'
     
     packetmanager:
       service:
-        'packetmanager-service': 'mosipdev/commons-packet-service:1.1.4'
+        'packetmanager-service': 'mosipid/commons-packet-service:1.1.4'
 
     datashare:
       service:
-        'datashare-service': 'mosipdev/data-share-service:1.1.4'
+        'datashare-service': 'mosipid/data-share-service:1.1.4'
 
     print:
       service:
-        'print-service': 'mosipdev/print:1.1.4'
+        'print-service': 'mosipid/print:1.1.4'
 
     websub:
       service:
-        'websub-service': 'mosipdev/websub-service:develop'
+        'websub-service': 'mosipid/websub-service:1.1.4'
 
     mock:
       abis:
-        'mock-abis': 'mosipdev/mock-abis:master'
+        'mock-abis': 'mosipid/mock-abis:1.1.4'
 #      biosdk: 
-#        'mock-biosdk-service': 'mosipdev/sdk-services:latest'
+#        'mock-biosdk-service': 'mosipid/sdk-services:latest'
 
     artifactory:
       service:
-        'artifactory-service': 'mosipdev/artifactory-server:1.1.4'
+        'artifactory-service': 'mosipid/artifactory-server:1.1.4'
