--- a/deployment/sandbox-v2/roles/ssl/letsencrypt/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/ssl/letsencrypt/tasks/main.yml
@@ -6,6 +6,9 @@
     state: present
   become: yes
 
+- name: Upgrade pip to latest
+  command: '{{ansible_env.HOME}}/.venv-py3/bin/pip install --upgrade pip'
+
 - name: Install certbot in python3 virtual environment 
   pip:
     name: certbot
