--- a/deployment/sandbox-v2/utils/production/podconfig.prod.yml
+++ b/deployment/sandbox-v2/utils/production/podconfig.prod.yml
@@ -370,48 +370,52 @@ podconfig:
       minReadySeconds: 10
       maxUnavailable: 1
       maxSurge: 1 
-      requests:
-        cpu: 200m
-        memory: 1000Mi
-      limits:
-        cpu: 500m
-        memory: 1000Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 1000Mi
+        limits:
+          cpu: 500m
+          memory: 1000Mi
 
     camel:
       replicas: 1
       minReadySeconds: 10
       maxUnavailable: 1
       maxSurge: 1 
-      requests:
-        cpu: 200m
-        memory: 1000Mi
-      limits:
-        cpu: 500m
-        memory: 1000Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 1000Mi
+        limits:
+          cpu: 500m
+          memory: 1000Mi
 
     status:
       replicas: 1
       minReadySeconds: 10
       maxUnavailable: 1
       maxSurge: 1 
-      requests:
-        cpu: 200m
-        memory: 1000Mi
-      limits:
-        cpu: 500m
-        memory: 1000Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 1000Mi
+        limits:
+          cpu: 500m
+          memory: 1000Mi
 
     pktserver:
       replicas: 1
       minReadySeconds: 10
       maxUnavailable: 1
       maxSurge: 1 
-      requests:
-        cpu: 200m
-        memory: 1000Mi
-      limits:
-        cpu: 500m
-        memory: 1000Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 1000Mi
+        limits:
+          cpu: 500m
+          memory: 1000Mi
 
   prereg:
     application:
@@ -419,60 +423,65 @@ podconfig:
       minReadySeconds: 10
       maxUnavailable: 0
       maxSurge: 1
-      requests:
-        cpu: 200m
-        memory: 4000Mi
-      limits:
-        cpu: 1000m
-        memory: 4000Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 4000Mi
+        limits:
+          cpu: 1000m
+          memory: 4000Mi
 
     batch:
       replicas: 1
       minReadySeconds: 10
       maxUnavailable: 0
       maxSurge: 1
-      requests:
-        cpu: 200m
-        memory: 40Mi
-      limits:
-        cpu: 500m
-        memory: 40Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 40Mi
+        limits:
+          cpu: 500m
+          memory: 40Mi
   
     booking:
       replicas: 2 
       minReadySeconds: 10
       maxUnavailable: 1
       maxSurge: 1
-      requests:
-        cpu: 200m
-        memory: 1000Mi
-      limits:
-        cpu: 500m
-        memory: 1000Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 1000Mi
+        limits:
+          cpu: 500m
+          memory: 1000Mi
  
     datasync:
       replicas: 2 
       minReadySeconds: 10
       maxUnavailable: 0
       maxSurge: 1
-      requests:
-        cpu: 200m
-        memory: 1000Mi
-      limits:
-        cpu: 500m
-        memory: 1000Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 1000Mi
+        limits:
+          cpu: 500m
+          memory: 1000Mi
 
     ui:
       replicas: 1
       minReadySeconds: 10
       maxUnavailable: 0
       maxSurge: 1  
-      requests:
-        cpu: 200m
-        memory: 300Mi
-      limits:
-        cpu: 500m
-        memory: 300Mi
+      resources:
+        requests:
+          cpu: 200m
+          memory: 300Mi
+        limits:
+          cpu: 500m
+          memory: 300Mi
 
   ida:
     auth:
